# pymake

./: Makefile.py  setup.cfg  test_requirements.txt
.github/workflows/: ci.yml
scripts/: check_tag.py
src/: pymake.py
src/pymake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/tests/: test_pymake.py  utils.py
