[metadata]
name = pymake
version = 0.0.1
url = https://github.com/kbairak/pymake
author = Konstantinos Bairaktaris
author_email = ikijob@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
description = A GNU-make-similar tool written in python and with Makefiles written in python
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pymake = pymake:main
